# MNN-Unity-Plugin

./: .gitignore  .gitmodules  LICENSE
package/: LICENSE  package.json
package/Runtime/: MNNPlugin.Runtime.asmdef  NativePlugin.cs
package/Samples/: Test.unity
project/MNNUnityPlugin/Assets/: TestNativePlugin.cs
project/MNNUnityPlugin/Assets/Scenes/: SampleScene.unity
project/MNNUnityPlugin/Assets/Scripts/: MNNProject.asmdef  TestNativePlugin.cs
project/MNNUnityPlugin/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
project/MNNUnityPlugin/ProjectSettings/: ProjectSettings.asset
src/: CMakeLists.txt  library.cpp  mnn_plugin.cpp  mnn_test.cpp
src/include/: mnn_plugin.h
